- fixed Derby failures because it does not support nchar, nvarchar, etc.  It used to extend from DB2 dialects and many test filters just did instance-of checks..    - proper `org.hibernate.dialect.DerbyDialect#supportsNationalizedTypes()` impl    - added `org.hibernate.testing.orm.junit.DialectFeatureChecks.SupportsNationalizedData` - had another test then failing locally because table not being dropped from an earlier test because that earlier test did not clean up.  I revamped `hibernate.test.validateDataCleanup` so that it works with the new annotation-driven testing as well.  There are a lot of tests that do not clean up after themselves :(  This commit includes my first batch at fixing those up - I think this all also showed me a real problem I ear-marked to circle back to... it does not seem like collection-tables are getting deleted from, at least in the element-collection test i was looking at : `org.hibernate.orm.test.bytecode.enhancement.merge.CompositeMergeTest` - enable its `#dropTestData` method to see example